# handspring

./: Cargo.toml  README.md
benches/: clip_vit_b_32_image.rs
examples/: README.md
examples/clip/: main.rs
examples/clip_vit_b_32_image_embeddings/: main.rs
hs-audio-core/: Cargo.toml
hs-audio-core/src/: embeddings.rs
hs-audio-core/src/embeddings/: model.rs
hs-audio-core/src/preprocessing/: config.rs
hs-core/: Cargo.toml
hs-core/src/: config.rs  errors.rs  lib.rs  transformers.rs
hs-core/src/transformers/: config.rs  encoder.rs  layers.rs  model.rs  tensor_ops.rs
hs-image-core/: Cargo.toml
hs-image-core/src/: embeddings.rs  lib.rs  preprocessing.rs
hs-image-core/src/embeddings/: config.rs  layers.rs  model.rs
hs-image-core/src/preprocessing/: config.rs
hs-mm-embeddings/: Cargo.toml  build.rs
hs-mm-embeddings-examples/: Cargo.toml
hs-mm-embeddings/models/clip_vit_b_32/: config.json
hs-mm-embeddings/models/clip_vit_b_32/full/: config.json
hs-mm-embeddings/models/clip_vit_b_32/image/: config.json
hs-mm-embeddings/src/: config.rs  lib.rs
hs-mm-embeddings/src/clip_vit_b_32/: model.rs
hs-mm-embeddings/src/clip_vit_b_32_image/: model.rs
hs-text-core/: Cargo.toml
hs-text-core/src/: embeddings.rs  lib.rs
hs-text-core/src/embeddings/: layers.rs  model.rs
hs-text-core/src/preprocessing/: config.rs
