workspace = { members = [ "hs-audio-core","hs-core", "hs-image-core", "hs-mm-embeddings", "hs-mm-embeddings-examples"] }
[package]
name = "handspring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
