[workspace]
members = [
    "hs-audio-core",
    "hs-core",
    "hs-image-core",
    "hs-mm-embeddings",
    "hs-text-core"
]



[package]
name = "handspring"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
rust-embed="8.3.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0"}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0"}


[dev-dependencies]
log = { workspace = true }
hs-mm-embeddings = { path = "hs-mm-embeddings", features = ["clip_vit_b_32_image"] }
candle-core = { workspace = true }
env_logger = "0.11.2"
criterion = "0.5.1"

[features]
clip_vit_b_32_image = ["hs-mm-embeddings/clip_vit_b_32_image"]


[[example]]
name = "clip_vit_b_32_image_embeddings"

[[bench]]
name = "clip_vit_b_32_image"
harness = false
