[package]
name = "hs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
env_logger = "0.11.2"

serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0"}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0"}